// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a default avatar 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 24px;
  height: 60px;
  width: 60px;
}

<img
  alt="Mr bean"
  class="c0 c1"
  kind="square"
  src="https://raw.githubusercontent.com/bigbellies/fannypack/master/src/_docs/bean.jpg"
/>
`;

exports[`renders correctly for an avatar with a custom size prop set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 24px;
  height: 50px;
  width: 50px;
}

<div
  alt="SW"
  class="c0 c1"
  kind="square"
>
  SW
</div>
`;

exports[`renders correctly for an avatar with a fit prop set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 24px;
  height: 60px;
  width: 60px;
}

.c0 {
  object-fit: cover;
}

<img
  alt="Mr bean"
  class="c0 c1"
  kind="square"
  src="https://raw.githubusercontent.com/bigbellies/fannypack/master/src/_docs/bean.jpg"
/>
`;

exports[`renders correctly for an avatar with a palette prop set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #444bc9;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #444bc9;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 24px;
  height: 60px;
  width: 60px;
}

<div
  alt="SW"
  class="c0 c1"
  kind="square"
>
  SW
</div>
`;

exports[`renders correctly for an avatar with a size prop set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 24px;
  height: 60px;
  width: 60px;
}

.c0 {
  font-size: 48px;
  width: 100px;
  height: 100px;
}

<div
  alt="SW"
  class="c0 c1"
  kind="square"
>
  SW
</div>
`;

exports[`renders correctly for an avatar with an initials prop set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 24px;
  height: 60px;
  width: 60px;
}

<div
  alt="SW"
  class="c0 c1"
  kind="square"
>
  SW
</div>
`;
